WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
99286
[EFL][WK2] Cannot set evas engine from command line
https://bugs.webkit.org/show_bug.cgi?id=99286
Summary
[EFL][WK2] Cannot set evas engine from command line
Yael
Reported
2012-10-14 20:08:38 PDT
After
http://trac.webkit.org/changeset/130887
it is not possible to change evas engine from the command line anymore. Changing the engine is necessary when testing accelerated compositing in webkit-efl.
Attachments
Patch
(1.15 KB, patch)
2012-10-15 06:22 PDT
,
Yael
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yael
Comment 1
2012-10-14 20:34:13 PDT
A patch is coming.
Yael
Comment 2
2012-10-15 06:22:55 PDT
Created
attachment 168698
[details]
Patch If an engine name is passed on the command line, pass it along to evas.
WebKit Review Bot
Comment 3
2012-10-15 13:56:13 PDT
Comment on
attachment 168698
[details]
Patch Clearing flags on attachment: 168698 Committed
r131352
: <
http://trac.webkit.org/changeset/131352
>
WebKit Review Bot
Comment 4
2012-10-15 13:56:17 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug