[EFL][WK2] Cannot set evas engine from command line https://bugs.webkit.org/show_bug.cgi?id=99286

Patch by Yael Aharon <yael.aharon@intel.com> on 2012-10-15
Reviewed by Kenneth Rohde Christiansen.

If an engine name is passed on the command line, pass it along to evas.

* MiniBrowser/efl/main.c:
(elm_main):

Canonical link: https://commits.webkit.org/117317@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@131352 268f45cc-cd09-0410-ab3c-d52691b4dbfc